Trying to guard against IE10 text wrap bug

--- a/prototype-site/00-source-files/ZZ-Swordion-DO-NOT-EDIT/sass/04-base-SASS/00-grid-base-styles.scss
+++ b/prototype-site/00-source-files/ZZ-Swordion-DO-NOT-EDIT/sass/04-base-SASS/00-grid-base-styles.scss
@@ -113,6 +113,7 @@ $grid-bp-list: if(
 		background-clip: padding-box!important;
 		border: 0 solid transparent;
 		flex-grow: 1;
+		flex-shrink: 1;
 		outline-color: #000;
 		border-color: #000;
 
